# gemm

./: .gitignore  CMakeLists.txt  makefile  sgemm.cc  sgemm.h  test.cc
cmake/: dependencies.cmake
gemm/: CMakeLists.txt  blas_benchmark.cc  cpu_gemm_benchmark.cc  error_checking.h  gemm_benchmark.cc  gemm_benchmark.h  sgemm.cc  sgemm.h  test.cc
